# google-demos

./: .markdownlint.yaml  LICENSE  README.md
bigquery-iceberg-lakehouse/: README.md  pyproject.toml
bigquery-iceberg-lakehouse/docs/: iceberg-code-overview.md  iceberg-demo.md
bigquery-iceberg-lakehouse/src/: bq_demo_functions.py  spark_demo_functions.py  spark_ml.py  trade_data.py
bigquery-unstructured-data/: README.md  unstructured_data_demo.ipynb  unstructured_data_intelligence_demo.ipynb
data-engineering-agent-intro/: README.md
data-engineering-agent-intro/docs/: data-eng-agent-demo.md
dataproc-premium-demo/: README.md  pyproject.toml
dataproc-premium-demo/docs/: dataproc-premium-demo.md
dataproc-premium-demo/notebooks/: bigquery_benchmark.ipynb
dataproc-premium-demo/src/: complex_analysis_job.py  data_generator.py
dataproc-secure-multi-tenancy/: README.md  pyproject.toml
dataproc-secure-multi-tenancy/docs/: dataproc-secure-multi-tenancy-demo.md
dataproc-secure-multi-tenancy/src/: read_gcs_data.py
