[project]
name = "iceberg-bigquery-demo"
version = "0.1.0"
description = "Iceberg & BigQuery, Open, Fast, AI-Ready Demo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-auth>=2.40.3",
    "google-cloud-bigquery>=3.34.0",
    "google-cloud-pubsub>=2.29.1",
    "google-cloud-storage>=3.1.0",
    "ipython>=9.3.0",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "pygments>=2.19.1",
    "pyiceberg[gcsfs]>=0.9.1",
    "pyspark==3.5.6",
    "pytz>=2025.2",
    "setuptools>=80.9.0",
    "tabulate>=0.9.0",
]
